# ts-validator

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PROCESS_DIAGRAM.md  README.md  TASKS.md
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs  visitor.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration_test.rs
crates/debug/: Cargo.toml
crates/debug/src/: debug.rs  lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/heuristics/: Cargo.toml
crates/heuristics/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: fs.rs  lib.rs  parser.rs  types.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: lib.rs  violation.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  logging.rs  utils.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs  validation.rs
examples/test-express-app/: README.md  package-lock.json  package.json
examples/test-express-app/src/: index.ts  types.ts
examples/test-express-app/src/config/: index.ts
examples/test-express-app/src/middleware/: authMiddleware.ts  errorMiddleware.ts
examples/test-express-app/src/routes/: postRoutes.ts  userRoutes.ts
npm-wrapper/: README.md  cli.js  install.js  package-lock.json  package.json  version.js
scripts/: build.sh  coverage.sh  local-test.sh  upload.sh
test-express-app/src/: index.ts  types.ts
