[package]
name = "analysis"
edition = "2021"

[dependencies]
validation = { path = "../validation" }
utils = { path = "../utils" }
reporting = { path = "../reporting" }
parser = { path = "../parser" }
clap = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_visit = { workspace = true }

[dev-dependencies]
swc_ecma_parser = { workspace = true }