[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
analysis = { path = "../analysis" }
error = { path = "../error" }
heuristics = { path = "../heuristics" }
parser = { path = "../parser" }
reporting = { path = "../reporting" }