[package]
name = "cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "ts-validator"
path = "src/main.rs"

[dependencies]
analysis = { path = "../analysis" }
validation = { path = "../validation" }
parser = { path = "../parser" }
reporting = { path = "../reporting" }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"