[package]
name = "cli"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "ts-validator"
path = "src/main.rs"

[dependencies]
analysis = { path = "../analysis" }
validation = { path = "../validation" }
parser = { path = "../parser" }
reporting = { path = "../reporting" }
utils = { path = "../utils" }
clap = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"